# MSAT

./: .gitignore  CHANGELOG.md  MSAT.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: inventory.yml  playbook.yml
scripts/: release.ps1
src/mosberg/: __init__.py  cli.py  inventory.py  sshclient.py  tasks.py  templates.py
tests/: test_deploy_and_playbook.py  test_inventory.py  test_templates.py
